--- a/app/views/trayectos/show.html.erb
+++ b/app/views/trayectos/show.html.erb
@@ -1,4 +1,7 @@
-<h1>Mostrando la ruta seleccionada</h1>
+<h1>Mostrando la ruta seleccionada</h1> 
 
 <p>Title: <%= @trayecto.title %></p>
 <p>Description: <%= @trayecto.description %></p>
+
+<%= link_to "Mostrar las paradas de esta ruta", centros_path %>
+<%= link_to "Regresar a todas las rutas", trayectos_path %>
