Paradas column added to Trayecto

--- a/app/views/trayectos/index.html.erb
+++ b/app/views/trayectos/index.html.erb
@@ -11,6 +11,7 @@
     <td><%= trayecto.title %></td>
     <td><%= trayecto.description %></td>
     <td><%= trayecto.id %></td>
+    <td><%= trayecto.paradas %></td>
     <td><%= link_to 'Show', trayecto_path(trayecto) %></td>
     <td><%= link_to "Mostrar otras paradas de esta ruta", paradas_path %></td>
   </tr>
